explicitly set z-index on app-content, fix overlap from navigation

--- a/core/css/apps.css
+++ b/core/css/apps.css
@@ -410,6 +410,7 @@
 	position: relative;
 	height: 100%;
 	overflow-y: auto;
+	z-index: 100;
 }
 
 #app-content-wrapper {
@@ -555,4 +556,3 @@ em {
 	z-index:500;
 	padding:16px;
 }
-
